--- a/web/index.html
+++ b/web/index.html
@@ -5,12 +5,47 @@
 
     <h1>Vue</h1>
   </head>
+<style>
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
 
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+</style>
+	
+	
+	
+	
   <body>
+	      <!-- tooltips https://www.w3schools.com/css/css_tooltip.asp-->
+	  <h1 class="tooltip">Human Visible Project Blender 3D manual coarse
+	    <span class="tooltiptext">Tooltip text</span>
+	  </h1>
     <div id="app">
-      uv 93
+      uv = 96
       <div id="div1"></div>
-    
+
 <a href="Human-Visible-Project-Blender-3D-manual-coarseBl293curves.html">Human-Visible-Project-Blender-3D-manual-coarseBl293curves.blend</a>
 <br>
 	    <a href="Human-Visible-Project-Blender-3D-manual-coarseBl293curvesMERGE.html">Human-Visible-Project-Blender-3D-manual-coarseBl293curvesMERGE.blend</a>
