--- a/web/index.html
+++ b/web/index.html
@@ -40,10 +40,10 @@
   <body>
 	      <!-- tooltips https://www.w3schools.com/css/css_tooltip.asp-->
 	  <h1 class="tooltip">Human Visible Project Blender 3D manual coarse
-	    <span class="tooltiptext">Tooltip text</span>
+		  <span class="tooltiptext"><a href="https://moueza.github.io/index-des-ressources-resources-moueza-peter.html">Index des ressources</a></span>
 	  </h1>
     <div id="app">
-      uv = 96
+      uv = 97
       <div id="div1"></div>
 
 <a href="Human-Visible-Project-Blender-3D-manual-coarseBl293curves.html">Human-Visible-Project-Blender-3D-manual-coarseBl293curves.blend</a>
