uv = 98 background color

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,9 @@
     <h1>Vue</h1>
   </head>
 <style>
+h1{
+background-color:grey;
+	}
 /* Tooltip container */
 .tooltip {
   position: relative;
@@ -43,7 +46,7 @@
 		  <span class="tooltiptext"><a href="https://moueza.github.io/index-des-ressources-resources-moueza-peter.html">Index des ressources</a></span>
 	  </h1>
     <div id="app">
-      uv = 97
+      uv = 98
       <div id="div1"></div>
 
 <a href="Human-Visible-Project-Blender-3D-manual-coarseBl293curves.html">Human-Visible-Project-Blender-3D-manual-coarseBl293curves.blend</a>
