--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,8 @@ background-color:grey;
 <br>
 	    <a href="Human-Visible-Project-Blender-3D-manual-coarseBl293curvesMERGE.html">Human-Visible-Project-Blender-3D-manual-coarseBl293curvesMERGE.blend</a>
 
-
+<br>
+	    <a href="https://github.com/moueza/Human-Visible-Project-Blender-3D-manual-coarse">src</a>
       <img src="overview.png">
     </div>
     
